[package]
name = "pxo"
version = "0.2.0"
edition = "2021"
authors = ["appybara13"]
repository = "https://github.com/appybara13/pxo"
homepage = "https://github.com/appybara13/pxo"
license = "MIT OR Apache-2.0"
description = "Utilities for loading Pixelorama files"
readme = "README.md"
keywords = ["gamedev", "pixelorama", "sprite", "pixel", "2D"]
categories = ["game-development", "multimedia::images", "rendering::data-formats"]
include = ["Cargo.toml", "README.md", "LICENSE", "src/*"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
image = "0.24"
serde_json = "1.0"
zstd = "0.12"
thiserror = "1.0"
rectangle-pack = {version = "0.4", optional = true}

[features]
default = ["sprite", "pack"]
sprite = []
pack = ["dep:rectangle-pack", "sprite"]

